[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["full"] }
tarpc = "0.32.0"
tarpc-plugins = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.19.0"
termion = "2.0.1"